test/types/range/cast-assign-init/casts-4.good
casts-4.chpl:8: error: 'tryCast' to a range type with idxType=bool is not currently supported
